@@ -63,7 +63,6 @@ dependencies {
 
     // JUnit annotations
     implementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    implementation 'org.junit.jupiter:junit-jupiter-params:5.7.0'
 
     // Test Containers
     implementation "org.testcontainers:testcontainers:1.17.5"
@@ -207,7 +206,7 @@ javadoc {
 
 group = "cloud.filibuster"
 archivesBaseName = "instrumentation"
-version = "1.2.1"
+version = "1.3.0"
 
 java {
     withJavadocJar()
@@ -306,7 +305,7 @@ task integrationTest(type: Test) {
     }
 }
 
-task functionalJavaSmokeTest(type: Test) {
+task functionalJavaTest(type: Test) {
     useJUnitPlatform()
 
     maxParallelForks = 1
@@ -316,45 +315,7 @@ task functionalJavaSmokeTest(type: Test) {
     jvmArgs '-XX:MaxPermSize=256m' // mem argument for the test JVM
 
     filter {
-        includeTestsMatching('cloud.filibuster.functional.java.smoke.*')
-    }
-}
-
-task functionalJavaHelloTest(type: Test) {
-    useJUnitPlatform()
-
-    maxParallelForks = 1
-    timeout = Duration.ofMinutes(60)
-    minHeapSize = "128m" // initial heap size
-    maxHeapSize = "2048m" // maximum heap size
-    jvmArgs '-XX:MaxPermSize=256m' // mem argument for the test JVM
-
-    filter {
-        includeTestsMatching('cloud.filibuster.functional.java.hello.*')
-    }
-}
-
-task functionalJavaAnalysisTest(type: Test) {
-    useJUnitPlatform()
-
-    filter {
-        includeTestsMatching('cloud.filibuster.functional.java.analysis.*')
-    }
-}
-
-task functionalJavaLatencyTest(type: Test) {
-    useJUnitPlatform()
-
-    filter {
-        includeTestsMatching('cloud.filibuster.functional.java.latency.*')
-    }
-}
-
-task functionalJavaCompositionalTest(type: Test) {
-    useJUnitPlatform()
-
-    filter {
-        includeTestsMatching('cloud.filibuster.functional.java.compositional.*')
+        includeTestsMatching('cloud.filibuster.functional.java.*')
     }
 }
 
